# qcrbox_cmd_tester

./: .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: index.md  installation.md  running.md  yaml-format.md
qcrbox_tests/: cod_check.yaml  mopro.yaml  olex2.yaml  qcrboxtools.yaml  xharpy-gpaw.yaml
qcrbox_tests/test_cif_files/: epoxide_isotropic.cif  olex2_commands.txt  xharpy_test.cif  ylid_cell_only.cif  ylid_iam_refined.cif
qcrbox_tests/test_cif_files/mopro_files/: CONSTRAIN.txt  RESTRAIN.txt  mopro.inp
src/qcrbox_cmd_tester/: __main__.py  error_formatter.py  io_adapters.py  models.py  qcrbox_client.py  run_suite.py  run_test.py  test_implementations.py
src/qcrbox_cmd_tester/models/: __init__.py  expected_values.py
tests/: test_all_result_types.yaml  test_error_formatter.py  test_expected_values.py  test_models.py  test_parse_yaml.py  test_run_suite.py  test_test_implementations.py  test_yaml_integration.py
