[project]
authors = [{name = "Paul Niklas Ruth", email = "panikruth@gmail.com"}]
name = "qcrbox_cmd_tester"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["qcrboxapiclient @ git+https://github.com/QCrBox/QCrBoxAPIClient@0.1.0?rev_type=tag"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch]
metadata.allow-direct-references = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
qcrbox_cmd_tester = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pyyaml = ">=6.0.3,<7"
pydantic = ">=2.12.2,<3"
pycifrw = ">=4.4.6,<5"

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.devtools.dependencies]
jupyterlab = "*"
ruff = ">=0.14.1,<0.15"

[tool.pixi.environments]
dev = { features = ["test", "devtools"], solve-group = "default" }
